Fix lightbox on mobile

--- a/website/scss/_variables.scss
+++ b/website/scss/_variables.scss
@@ -7,7 +7,7 @@ $base-text-color: $blackish;
 $link-color: #0000EE;
 
 $z-index-nav: 10;
-
+$z-index-footer: 10;
 $z-index-lightbox: 20;
 $z-index-lightbox-close: 21;
 $z-index-lightbox-image: 21;
